--- a/My Portfolio/index.html
+++ b/My Portfolio/index.html
@@ -20,6 +20,7 @@
 	<!-- script -->
 	<script src="js/modernizr.js"></script>
 	<script src="js/pace.min.js"></script>
+	<script src="particles.js"></script>
 
 	<!-- favicons -->
 	<link rel="icon" type="image/png" href="favicon.png">
@@ -58,7 +59,7 @@
 	<section id="intro">
 
 		<div class="intro-overlay"></div>
-
+		<div id="particles-js"></div>
 		<div class="intro-content">
 			<div class="row">
 
