--- a/My Portfolio/index.html
+++ b/My Portfolio/index.html
@@ -20,7 +20,6 @@
 	<!-- script -->
 	<script src="js/modernizr.js"></script>
 	<script src="js/pace.min.js"></script>
-	<script src="particles.js"></script>
 
 	<!-- favicons -->
 	<link rel="icon" type="image/png" href="favicon.png">
@@ -57,12 +56,13 @@
 
 	<!-- intro section -->
 	<section id="intro">
-
-		<div class="intro-overlay"></div>
+		
+		
+		<!-- <div class="intro-overlay"></div> -->
 		<div id="particles-js"></div>
 		<div class="intro-content">
 			<div class="row">
-
+				
 				<div class="col-twelve">
 
 					<h5>Hello, World.</h5>
@@ -86,7 +86,6 @@
 			<li><a href="https://www.linkedin.com/in/mohammedsalmanuddin"><i class="fa fa-linkedin"></i></a></li>
 			<li><a href="https://www.instagram.com/perksofbeingrealistic.in/"><i class="fa fa-instagram"></i></a></li>
 		</ul> <!-- /intro-social -->
-
 	</section> <!-- /intro -->
 
 
@@ -780,6 +779,9 @@
 	<script src="js/jquery-2.1.3.min.js"></script>
 	<script src="js/plugins.js"></script>
 	<script src="js/main.js"></script>
+	<script src="particles.js"></script>
+	<script src="app.js"></script>
+
 
 </body>
 
